--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,11 +18,42 @@
                 padding: 20px;
                 color: #fff;
             }
+
+            .countdown {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                background-color: #444;
+                padding: 10px 20px;
+                border-radius: 5px;
+                font-size: 18px;
+                font-weight: bold;
+                font-family: 'Franklin Gothic Medium', sans-serif;
+                color: #fff;
+            }
         </style>
     </head>
 <body>
 
 <h1>Fortnite Item Shop</h1>
+
+<div class="countdown" id="countdown">Next Refresh In: 00:00:00</div>
+
+<script>
+    function UpdateCountdown() {
+        fetch('/countdown')
+        .then(response => response.json())
+        .then(data => {
+            const CountdownElement = document.getElementById('countdown');
+            CountdownElement.textContent = `Next Refresh In: ${data.time}`;
+        })
+        .catch(error => console.error('Error Fetching Countdown:', error));
+    }
+
+    setInterval(UpdateCountdown, 1000);
+
+    UpdateCountdown();
+</script>
 
 </body>
 </html>
